# weathermetrics

./: .gitignore  74486094789_model_data_relhum.csv  README.md  my_data.parquet  pyproject.toml  s4code_construct_data.ipynb  s4model.py
Py_create_tcn_data/: Py01_s4code_construct_data.ipynb  Py01_s4code_construct_data02.ipynb  Py01_s4code_construct_data02_mod.ipynb  Py02_s4code_construct_data.ipynb  Py03_s4code_construct_data.ipynb  Py04_s4code_construct_data.ipynb  Py05_s4code_construct_data.ipynb  Py06_s4code_construct_data.ipynb  Py06_s4code_construct_data_prajwal.ipynb  R00_Check_precip_data.R  R10_Precip_mnl.R  R11_Precip_S4_bat_files.R  R12_Precip_s4_summary.R  Station_Pairs_LE_100km_Info.csv  construct_data_temp.ipynb  s4code_construct_data.ipynb  sample_code_datetime.ipynb  sample_code_datetime.py  sample_stationids.ipynb  stations.csv
archive/: Py05_s4code_construct_data_prajwal.ipynb  Py06_s4code_construct_data_prajwal.ipynb  py_s4.bat  (+5 more)
s4model/: README.md  charts.py  config.py  dataset.py  infer.py  main.py  model.py  output.py  py_s4b_bin1_5_20.bat  py_s4b_bin1_5_20_test.bat  pyproject.toml  run_models.bat  s4model.py  s4model_test.py  sample.py  train.py
s4model/src/s4model/: README.md  charts.py  dataset.py  infer.py  model.py  output.py  s4model.py  sample.py  train.py
s4model/src/s4model/models/nn/: linear.py
s4model/src/s4model/models/s4/: s4d.py
weathermetricsdata/: README.md  pipeline_config.json  pyproject.toml
weathermetricsdata/src/weathermetricsdata/: __init__.py  pipeline.py  run_pipeline.py
weathermetricsdata/tests/: test_pipeline.py
(+61 files in other folders)
